--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -2,7 +2,7 @@ name: TPO Notification Cron Job
 
 on:
   schedule:
-    - cron: '*/30 * * * *'  # Runs every half hour
+    - cron: '*/10 * * * *'  # Runs every 10 mins
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
