--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -21,10 +21,10 @@ jobs:
 
     - name: Install Poetry
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
+        curl -LsSf https://astral.sh/uv/install.sh | sh
 
     - name: Install dependencies
-      run: poetry install
+      run: uv sync
 
     - name: Setup Chrome
       uses: browser-actions/setup-chrome@latest
@@ -39,4 +39,4 @@ jobs:
         echo "EMAIL=${{ secrets.EMAIL }}" >> .env
 
     - name: Run script
-      run: poetry run python notify.py
+      run: uv run python notify.py
