--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -2,7 +2,7 @@ name: TPO Notification Cron Job
 
 on:
   schedule:
-    - cron: '*/15 * * * *'  # Runs every 15 mins
+    - cron: '0 12 * * *'  # Runs every day @12pm
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
